# Note_froge

./: .gitignore  CLAUDE.md  DESIGN_IMPROVEMENTS.md  EDITOR_UX_IMPROVEMENTS.md  PHASE3_COMPLETE.md  README.md  START.md  UI_IMPROVEMENTS.md  fix-stores.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  documents.rs  mod.rs  notebooks.rs  notes.rs  search.rs  settings.rs  vault.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/services/: ai_client.rs  doc_indexer.rs  doc_parser.rs  indexer.rs  linker.rs  mod.rs  watcher.rs  web_parser.rs  youtube_parser.rs
src-tauri/src/utils/: chunker.rs  embeddings.rs  mod.rs  vision.rs
src/lib/: types.ts
src/lib/components/: AIPanel.svelte  AddSourceModal.svelte  Backlinks.svelte  ChatMessage.svelte  ChatTab.svelte  ConfirmModal.svelte  ContextMenu.svelte  DiffView.svelte  Editor.svelte  EditorPane.svelte  FileTree.svelte  Header.svelte  InputModal.svelte  Layout.svelte  NotebookList.svelte  Preview.svelte  QuickOpen.svelte  SearchTab.svelte  Settings.svelte  Sidebar.svelte  SourcesList.svelte  TabBar.svelte
src/lib/stores/: ai.svelte.ts  clipboard.ts  documents.svelte.ts  notebooks.svelte.ts  notes.svelte.ts  settings.svelte.ts  ui.svelte.ts
src/lib/utils/: async.ts  codemirror.ts  diff.ts  fuzzy.ts  hotkeys.ts  live-markdown-simple.ts  live-markdown.ts  markdown-keymap.ts  markdown.ts  tauri.ts  (+1 more)
