[package]
name = "noteforge"
version = "0.1.0"
description = "A note-taking app with AI assistant"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
regex = "1"
walkdir = "2"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "json", "native-tls", "multipart"] }
pdf-extract = "0.7"
lopdf = "0.34"
zip = "2"
quick-xml = "0.36"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
opener = "0.7"
scraper = "0.20"
notify = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
